--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,22 @@
   list-style: none;
   display: flex;
   justify-content: center;
-  color: black;
+  color: white;
 }
 
 .paginationBttns a {
-  padding: 10px;
-  margin: 8px;
+  padding: 15px;
+  margin: 10px;
   border-radius: 5px;
-  border: 1px solid black;
+  border: 1px solid yellow;
   cursor: pointer;
 }
 
 paginationBttns a:hover,
 .paginationActive a {
-  background-color: lightgrey;
+  background-color: grey;
+}
+
+.table {
+  color: #ffe81f;
 }
